--- a/skip/style.css
+++ b/skip/style.css
@@ -25,6 +25,11 @@ body {
 
 .input_area {
     width: 40%;
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    border: 1px solid #000;
+    padding: 5px 10px 5px 10px;
 }
 
 .button_generate_dim {
@@ -77,4 +82,8 @@ body {
     margin: auto;
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;
+}
+
+#footer {
+    margin-bottom: 2%;
 }
