--- a/skip/media.css
+++ b/skip/media.css
@@ -14,3 +14,14 @@
 .button_generate_dim {
     width: 80%;
 }
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.5) url(ajax-loader.gif) center center no-repeat;
+    background-size: 35%;
+    z-index:10;
+    top:0; 
+    left:0;
+}
