--- a/skip/style.css
+++ b/skip/style.css
@@ -1,10 +1,26 @@
 body { 
+    position: relative;
     background-image: url(background.png) ;
 	background-position: center center;
 	background-repeat:  no-repeat;
 	background-attachment: fixed;
 	background-size:  cover;
 	background-color: #FFF;
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.5) url(ajax-loader.gif) center center no-repeat;
+    background-size: 10%;
+    z-index:10;
+    top:0; 
+    left:0;
+}
+
+*:focus {
+    outline: none;
 }
 
 #page {
@@ -54,6 +70,19 @@ body {
     -moz-border-radius: 28;
     border-radius: 28px;
     border: 1px solid #1ce882;
+    padding: 5px 10px 5px 10px;
+}
+
+#generate_button:hover {
+    margin-top: 2%;
+    background: #1ce882; /* Old browsers */
+    background: -moz-linear-gradient(-30deg,  #31d5c2 42%, #1ce882 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-30deg,  #31d5c2 42%,#1ce882 100%); /* Chrome10-25,Safari5.1-6 */   
+    background: linear-gradient(120deg,  #31d5c2 42%,#1ce882 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    border: 1px solid #31d5c2;
     padding: 5px 10px 5px 10px;
 }
 
